ADD: nav layout

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta name="description" content="короче 150 символов">
     <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="https://example.com/favicon.ico">
+    <link rel="icon" type="image/png" href="https://example.com/favicon.png">
+    <!-- Apple Touch Icon (не меньше, чем 200x200px) -->
+    <link rel="apple-touch-icon" href="touch-icon-iphone.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="touch-icon-iphone-retina.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="touch-icon-ipad-retina.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    
+    @include('partials/index_Header.html')
 </body>
 </html>
