FIX: language switcher animation

--- a/app/index.html
+++ b/app/index.html
@@ -29,21 +29,21 @@
         </ul>
 
         <div class="nav__lang">
-            <div class="nav__lang--country eng">
-                <svg class="flag">
-                  <use xlink:href="img/sprite.svg#eng"></use>
-                </svg>
-                <p class="sub3">EN</p>
-            </div>
-
-            <div class="nav__lang--country rus">
+            <div id="rus" class="nav__lang--country">
                 <svg class="flag">
                   <use xlink:href="img/sprite.svg#rus"></use>
                 </svg>
                 <p class="sub3">RU</p>
             </div>
 
-            <div class="nav__lang--country ukr">
+            <div id="eng" class="nav__lang--country">
+                <svg class="flag">
+                  <use xlink:href="img/sprite.svg#eng"></use>
+                </svg>
+                <p class="sub3">EN</p>
+            </div>
+
+            <div id="ukr" class="nav__lang--country">
                 <svg class="flag">
                   <use xlink:href="img/sprite.svg#ukr"></use>
                 </svg>
