--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
     <header class="header">
     <nav class="nav">
         <ul class="nav__list">
-            <li><a class="nav--link sub3" href="">Главная</a></li>
+            <li><a id="translate1" class="nav--link sub3" href="">Главная</a></li>
             <li><a class="nav--link sub3" href="">Обо мне</a></li>
             <li><a class="nav--link sub3" href="">Портфолио</a></li>
             <li><a class="nav--link sub3" href="">Контакты</a></li>
@@ -52,5 +52,7 @@
         </div>
     </nav>
 </header>
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
