--- a/app/index.html
+++ b/app/index.html
@@ -29,18 +29,18 @@
         </ul>
 
         <div class="nav__lang [ js-nav__lang ]">
-            <div data-country="1" id="rus" class="nav__lang--country [ js-nav__lang--country ]">
-                <svg class="flag">
-                  <use xlink:href="img/sprite.svg#rus"></use>
-                </svg>
-                <p class="sub3">RU</p>
-            </div>
-
-            <div data-country="2" id="eng" class="nav__lang--country [ js-nav__lang--country ]">
+            <div data-country="1" id="eng" class="nav__lang--country [ js-nav__lang--country ]">
                 <svg class="flag">
                   <use xlink:href="img/sprite.svg#eng"></use>
                 </svg>
                 <p class="sub3">EN</p>
+            </div>
+
+            <div data-country="2" id="rus" class="nav__lang--country [ js-nav__lang--country ]">
+                <svg class="flag">
+                  <use xlink:href="img/sprite.svg#rus"></use>
+                </svg>
+                <p class="sub3">RU</p>
             </div>
 
             <div data-country="3" id="ukr" class="nav__lang--country [ js-nav__lang--country ]">
@@ -51,6 +51,11 @@
             </div>
         </div>
     </nav>
+
+    <div class="header__wrapper">
+        <img src="img/vector.svg">
+    </div>
+
 </header>
 
     <script src="./js/main.js"></script>
