ADD: lang switcher

--- a/src/modules/nav/nav.html
+++ b/src/modules/nav/nav.html
@@ -6,25 +6,25 @@
         <li class="nav__item">КОНТАКТЫ</li>
     </ul>
 
-    <div class="nav__lang">
-        <div data-lang="rus" data-place="1" class="nav__lang-rus nav__lang-isActive">
-            <svg class="nav__lang-flag">
+    <div class="nav__translate">
+        <div data-lang="rus" data-position="1" class="nav__lang js-nav__lang">
+            <svg class="nav__flag">
               <use xlink:href="img/sprite.svg#rus"></use>
             </svg>
 
             <p>RU</p>
         </div>
 
-        <div data-lang="eng" data-place="2" class="nav__lang-eng">
-            <svg class="nav__lang-flag">
+        <div data-lang="eng" data-position="2" class="nav__lang js-nav__lang">
+            <svg class="nav__flag">
               <use xlink:href="img/sprite.svg#eng"></use>
             </svg>
 
             <p>EN</p>
         </div>
 
-        <div data-lang="ua" data-place="3" class="nav__lang-ua">
-            <svg class="nav__lang-flag">
+        <div data-lang="ua" data-position="3" class="nav__lang js-nav__lang">
+            <svg class="nav__flag">
               <use xlink:href="img/sprite.svg#ua"></use>
             </svg>
 
