--- a/src/modules/about/about.html
+++ b/src/modules/about/about.html
@@ -1,5 +1,5 @@
 <section id="about">
-    <div class="about container">
+    <div class="about container element-animation">
         <h2 class="about__title h2">ОБО МНЕ</h2>
 
         <!-- CHAT -->
