--- a/src/modules/header/header.html
+++ b/src/modules/header/header.html
@@ -18,7 +18,7 @@
         <h2 class="h2">РАКИТОВА ЕКАТЕРИНА</h2>
         <h1 class="h1">UX/UI ДИЗАЙНЕР</h1>
 
-        <p class="header__title-text text20">
+        <p id="title" class="header__title-text text20">
             Разрабатываю сайты и приложения для Вашего бизнеса. Соблюдаю структуру,
             не перегружаю интерфейсы лишними декоративными элементами.
             Сотрудничая со мной, вы получаете удобный и красивый дизайн сайта/приложения за кратчайшие сроки.
