--- a/src/modules/nav/nav.html
+++ b/src/modules/nav/nav.html
@@ -7,7 +7,7 @@
     </ul>
 
     <div class="nav__translate">
-        <div data-lang="rus" data-position="1" class="nav__lang js-nav__lang">
+        <div data-lang="rus" data-position="1" id="ru" class="nav__lang js-nav__lang">
             <svg class="nav__flag">
               <use xlink:href="img/sprite.svg#rus"></use>
             </svg>
@@ -15,7 +15,7 @@
             <p>RU</p>
         </div>
 
-        <div data-lang="eng" data-position="2" class="nav__lang js-nav__lang">
+        <div data-lang="eng" data-position="2" id="en" class="nav__lang js-nav__lang">
             <svg class="nav__flag">
               <use xlink:href="img/sprite.svg#eng"></use>
             </svg>
@@ -23,7 +23,7 @@
             <p>EN</p>
         </div>
 
-        <div data-lang="ua" data-position="3" class="nav__lang js-nav__lang">
+        <div data-lang="ua" data-position="3" id="ua" class="nav__lang js-nav__lang">
             <svg class="nav__flag">
               <use xlink:href="img/sprite.svg#ua"></use>
             </svg>
