ADD: about desktop

--- a/src/modules/header/header.html
+++ b/src/modules/header/header.html
@@ -24,7 +24,7 @@
             Сотрудничая со мной, вы получаете удобный и красивый дизайн сайта/приложения за кратчайшие сроки.
         </p>
 
-        <button class="buttonBig">
+        <button class="button button-big button-solid">
             <p>К услугам</p>
 
             <svg class="">
