ADD: services / any fix

--- a/src/modules/about/about.html
+++ b/src/modules/about/about.html
@@ -81,17 +81,17 @@
             <div class="tabs__content">
                 <div data-tab="0" class="tabs__info tabs__info-isVisible">
                     <div class="tabs__general">
-                        <p>
+                        <p class="text20">
                             Меня зовут Екатерина, я - UX/UI дизайнер, мне 21 год. Заканчиваю университет.
                             Очень люблю свою профессиональную сферу. Верю в то, что правильный дизайн поможет
                             пользователю достичь своих целей.
                         </p>
 
-                        <p>
+                        <p class="text20">
                             Работаю как с крупными компаниями, так и с небольшими проектами.
                         </p>
 
-                        <p>
+                        <p class="text20">
                             Создаю красивые и практичные сайты, повышающие конверсию.
                             Разрабатываю стилистику сайта, исходя из фирменного стиля компании, или с нуля.
                             Продумываю анимации и переходы по страницам.
@@ -104,7 +104,7 @@
                             <img src="img/{name}@1x.jpg" srcset="img/{name}@2x.jpg 2x" alt="">
                             </picture> -->
 
-                            <p>Резюме_Ракитова_Екатерина.pdf</p>
+                            <p class="text20">Резюме_Ракитова_Екатерина.pdf</p>
                         </a>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                                     <use xlink:href="img/sprite.svg#way"></use>
                                 </svg>
 
-                                <p>Графический дизайн. SHAD - школа архитектуры и дизайна</p>
+                                <p class="text20">Графический дизайн. SHAD - школа архитектуры и дизайна</p>
                             </div>
                         </div>
 
@@ -143,7 +143,7 @@
                                     <use xlink:href="img/sprite.svg#way"></use>
                                 </svg>
 
-                                <p>Udemy - Веб дизайн в Figma 2022 - с нуля до результата, основы UX/UI</p>
+                                <p class="text20">Udemy - Веб дизайн в Figma 2022 - с нуля до результата, основы UX/UI</p>
                             </div>
                         </div>
 
@@ -161,7 +161,7 @@
                                     <use xlink:href="img/sprite.svg#way"></use>
                                 </svg>
 
-                                <p>Udemy - Веб дизайн в Figma 2023 Продвинутый уровень. Создание UI Kit</p>
+                                <p class="text20">Udemy - Веб дизайн в Figma 2023 Продвинутый уровень. Создание UI Kit</p>
                             </div>
                         </div>
 
@@ -177,7 +177,7 @@
                             <div class="tabs__way">
                                 <svg></svg>
 
-                                <p>Московский Политехнический Университет - Веб-технологии</p>
+                                <p class="text20">Московский Политехнический Университет - Веб-технологии</p>
                             </div>
                         </div>
                     </div>
@@ -195,8 +195,8 @@
 
                 <div data-tab="2" class="tabs__info">
                     <div class="tabs__experience">
-                        <p>c 2021 года я работаю на себя. Создаю дизайн-проекты любой сложности. Общаюсь с заказчиком, анализирую конкурентов, составляю и анализирую User experience. Создаю UI-kit.</p>
-                        <p>Выполнила более 10 проектов от частных клиентов, в том числе европейских, как следствие: есть опыт деловой переписки, составления ТЗ вместе с ними, понимание специфичности областей их работы. </p>
+                        <p class="text20">c 2021 года я работаю на себя. Создаю дизайн-проекты любой сложности. Общаюсь с заказчиком, анализирую конкурентов, составляю и анализирую User experience. Создаю UI-kit.</p>
+                        <p class="text20">Выполнила более 10 проектов от частных клиентов, в том числе европейских, как следствие: есть опыт деловой переписки, составления ТЗ вместе с ними, понимание специфичности областей их работы. </p>
 
                         <div data-customer="BerkoDesign" class="tabs__dropdown js-tabs__dropdown">
                             <div class="tabs__customer">
@@ -209,7 +209,7 @@
                             </div>
 
                             <div class="tabs__description js-tabs__description">
-                                <p>Работаем на постоянной основе с 2022 года. Разрабатывала одностраничные сайты для медицинских учреждений</p>
+                                <p class="text20">Работаем на постоянной основе с 2022 года. Разрабатывала одностраничные сайты для медицинских учреждений</p>
                             </div>
                         </div>
 
@@ -224,7 +224,7 @@
                             </div>
 
                             <div class="tabs__description js-tabs__description">
-                                <p>Работаем на постоянной основе с 2022 года. Разрабатывала одностраничные сайты для медицинских учреждений</p>
+                                <p class="text20">Работаем на постоянной основе с 2022 года. Разрабатывала одностраничные сайты для медицинских учреждений</p>
                             </div>
                         </div>
 
@@ -239,7 +239,7 @@
                             </div>
 
                             <div class="tabs__description js-tabs__description">
-                                <p>Работаем на постоянной основе с 2022 года. Разрабатывала одностраничные сайты для медицинских учреждений</p>
+                                <p class="text20">Работаем на постоянной основе с 2022 года. Разрабатывала одностраничные сайты для медицинских учреждений</p>
                             </div>
                         </div>
                     </div>
