--- a/src/modules/header/header.html
+++ b/src/modules/header/header.html
@@ -25,7 +25,7 @@
         </p>
 
         <button class="button button-big button-solid">
-            <p>К услугам</p>
+            <p class="buttonBigText">К услугам</p>
 
             <svg class="">
               <use xlink:href="img/sprite.svg#buttonArrow"></use>
