--- a/src/modules/nav/nav.html
+++ b/src/modules/nav/nav.html
@@ -1,4 +1,4 @@
-<nav class="nav">
+<nav class="nav js-nav">
     <ul class="nav__list">
         <li class="nav__item">ОБО МНЕ</li>
         <li class="nav__item">УСЛУГИ</li>
