--- a/src/modules/about/about.html
+++ b/src/modules/about/about.html
@@ -1,9 +1,11 @@
 <section id="about">
-    <div class="about container element-animation">
-        <h2 class="about__title h2">ОБО МНЕ</h2>
+    <div class="about container">
+        <div class="hidden">
+            <h2 class="about__title h2 title-entry">ОБО МНЕ</h2>
+        </div>
 
         <!-- CHAT -->
-        <div class="chat">
+        <div class="chat js-chat hidden">
             <!-- CLIENT -->
             <div data-whois="client" class="chat__item">
                 <div class="chat__avatar">
@@ -70,7 +72,7 @@
         </div>
 
         <!-- Tabcontainer -->
-        <div class="tabs">
+        <div class="tabs hidden">
             <div class="tabs__header">
                 <div data-header="0" class="tabs__item tabs__item-isActive h3">Общая информация</div>
                 <div data-header="1" class="tabs__item h3">Образование</div>
