--- a/src/modules/services/services.html
+++ b/src/modules/services/services.html
@@ -1,135 +1,143 @@
 <section id="services">
     <div class="services container">
-        <h2 class="services__title h2">Услуги</h2>
+        <div class="hidden">
+            <h2 class="services__title title-entry h2">Услуги</h2>
+        </div>
 
-        <div class="services__item">
-            <h3 class="h3">Одностраничный сайт</h3>
+        <div class="hidden">
+            <div class="services__item service-entry">
+                <h3 class="h3">Одностраничный сайт</h3>
 
-            <div class="services__about">
-                <div class="services__do">
-                    <ul class="services__list">
-                        <li class="text20">Прототип сайта</li>
-                        <li class="text20">Анализ конкурентов</li>
-                        <li class="text20">UI Kit (отдельная страница со стилями)</li>
-                        <li class="text20">Отрисовка уникального дизайна в Figma</li>
-                        <li class="text20">Отрисовка адаптива (мобильная версия)</li>
-                        <li class="text20">Добавление уместной анимации</li>
-                        <li class="text20">Подготовка макета к верстке</li>
-                    </ul>
+                <div class="services__about">
+                    <div class="services__do">
+                        <ul class="services__list">
+                            <li class="text20">Прототип сайта</li>
+                            <li class="text20">Анализ конкурентов</li>
+                            <li class="text20">UI Kit (отдельная страница со стилями)</li>
+                            <li class="text20">Отрисовка уникального дизайна в Figma</li>
+                            <li class="text20">Отрисовка адаптива (мобильная версия)</li>
+                            <li class="text20">Добавление уместной анимации</li>
+                            <li class="text20">Подготовка макета к верстке</li>
+                        </ul>
+                    </div>
+
+                    <div class="services__image">
+                        <picture>
+                            <source type="image/avif" srcset="img/landing@2x.avif 1x, img/landing@4x.avif 2x">
+                            <source type="image/webp" srcset="img/landing@2x.webp 1x, img/landing@4x.webp 2x">
+                            <img src="img/landing@1x.png" srcset="img/landing@4x.png 2x" alt="">
+                        </picture>
+                    </div>
                 </div>
 
-                <div class="services__image">
-                    <picture>
-                        <source type="image/avif" srcset="img/landing@2x.avif 1x, img/landing@4x.avif 2x">
-                        <source type="image/webp" srcset="img/landing@2x.webp 1x, img/landing@4x.webp 2x">
-                        <img src="img/landing@1x.png" srcset="img/landing@4x.png 2x" alt="">
-                    </picture>
+                <div class="services__footer">
+                    <div class="services__price">
+                        <p class="text24"><span>Цена: </span> от 10 000₽ </p>
+                        <p class="text24"><span>Сроки работы: </span> от 1 недели </p>
+                        <p class="text16">*правки по макету вносятся бесплатно в течение 2 месяцев после завершения работы. <a href="#">Подробнее</a></p>
+                    </div>
+
+                    <button class="button button-big button-solid">
+                        <p class="buttonBigText">Заказать</p>
+
+                        <svg class="">
+                        <use xlink:href="img/sprite.svg#buttonArrow"></use>
+                        </svg>
+                    </button>
                 </div>
-            </div>
-
-            <div class="services__footer">
-                <div class="services__price">
-                    <p class="text24"><span>Цена: </span> от 10 000₽ </p>
-                    <p class="text24"><span>Сроки работы: </span> от 1 недели </p>
-                    <p class="text16">*правки по макету вносятся бесплатно в течение 2 месяцев после завершения работы. <a href="#">Подробнее</a></p>
-                </div>
-
-                <button class="button button-big button-solid">
-                    <p class="buttonBigText">Заказать</p>
-
-                    <svg class="">
-                      <use xlink:href="img/sprite.svg#buttonArrow"></use>
-                    </svg>
-                </button>
             </div>
         </div>
 
-        <div class="services__item">
-            <h3 class="h3">многостраничный сайт</h3>
+        <div class="hidden">
+            <div class="services__item service-entry">
+                <h3 class="h3">многостраничный сайт</h3>
 
-            <div class="services__about">
-                <div class="services__do">
-                    <ul class="services__list">
-                        <li class="text20">Прототип сайта</li>
-                        <li class="text20">Анализ конкурентов</li>
-                        <li class="text20">Составление пользовательского сценария</li>
-                        <li class="text20">UI Kit (отдельная страница со стилями)</li>
-                        <li class="text20">Отрисовка уникального дизайна в Figma</li>
-                        <li class="text20">Отрисовка адаптива (мобильная версия)</li>
-                        <li class="text20">Добавление уместной анимации</li>
-                        <li class="text20">Страницы ошибок: 404, 500</li>
-                        <li class="text20">Страница загрузки</li>
-                        <li class="text20">Добавление необходимых окон (онлайн-оплата, расчет стоимости товаров, сбор заявок) в макете</li>
-                        <li class="text20">Подготовка макета к верстке</li>
-                    </ul>
+                <div class="services__about">
+                    <div class="services__do">
+                        <ul class="services__list">
+                            <li class="text20">Прототип сайта</li>
+                            <li class="text20">Анализ конкурентов</li>
+                            <li class="text20">Составление пользовательского сценария</li>
+                            <li class="text20">UI Kit (отдельная страница со стилями)</li>
+                            <li class="text20">Отрисовка уникального дизайна в Figma</li>
+                            <li class="text20">Отрисовка адаптива (мобильная версия)</li>
+                            <li class="text20">Добавление уместной анимации</li>
+                            <li class="text20">Страницы ошибок: 404, 500</li>
+                            <li class="text20">Страница загрузки</li>
+                            <li class="text20">Добавление необходимых окон (онлайн-оплата, расчет стоимости товаров, сбор заявок) в макете</li>
+                            <li class="text20">Подготовка макета к верстке</li>
+                        </ul>
+                    </div>
+
+                    <div class="services__image">
+                        <picture>
+                            <source type="image/avif" srcset="img/multipage@2x.avif 1x, img/multipage@4x.avif 2x">
+                            <source type="image/webp" srcset="img/multipage@2x.webp 1x, img/multipage@4x.webp 2x">
+                            <img src="img/multipage@1x.png" srcset="img/multipage@4x.png 2x" alt="">
+                        </picture>
+                    </div>
                 </div>
 
-                <div class="services__image">
-                    <picture>
-                        <source type="image/avif" srcset="img/multipage@2x.avif 1x, img/multipage@4x.avif 2x">
-                        <source type="image/webp" srcset="img/multipage@2x.webp 1x, img/multipage@4x.webp 2x">
-                        <img src="img/multipage@1x.png" srcset="img/multipage@4x.png 2x" alt="">
-                    </picture>
+                <div class="services__footer">
+                    <div class="services__price">
+                        <p class="text24"><span>Цена: </span> от 30 000₽  </p>
+                        <p class="text24"><span>Сроки работы: </span> от 3 недель </p>
+                        <p class="text16">*правки по макету вносятся бесплатно в течение 2 месяцев после завершения работы. <a href="#">Подробнее</a></p>
+                    </div>
+
+                    <button class="button button-big button-solid">
+                        <p class="buttonBigText">Заказать</p>
+
+                        <svg class="">
+                        <use xlink:href="img/sprite.svg#buttonArrow"></use>
+                        </svg>
+                    </button>
                 </div>
-            </div>
-
-            <div class="services__footer">
-                <div class="services__price">
-                    <p class="text24"><span>Цена: </span> от 30 000₽  </p>
-                    <p class="text24"><span>Сроки работы: </span> от 3 недель </p>
-                    <p class="text16">*правки по макету вносятся бесплатно в течение 2 месяцев после завершения работы. <a href="#">Подробнее</a></p>
-                </div>
-
-                <button class="button button-big button-solid">
-                    <p class="buttonBigText">Заказать</p>
-
-                    <svg class="">
-                      <use xlink:href="img/sprite.svg#buttonArrow"></use>
-                    </svg>
-                </button>
             </div>
         </div>
 
-        <div class="services__item">
-            <h3 class="h3">Приложение</h3>
+        <div class="hidden">
+            <div class="services__item service-entry">
+                <h3 class="h3">Приложение</h3>
 
-            <div class="services__about">
-                <div class="services__do">
-                    <ul class="services__list">
-                        <li class="text20">Прототип приложения</li>
-                        <li class="text20">Анализ конкурентов</li>
-                        <li class="text20">Составление пользовательского сценария</li>
-                        <li class="text20">UI Kit (отдельная страница со стилями)</li>
-                        <li class="text20">Отрисовка уникального дизайна в Figma (только для мобильных)</li>
-                        <li class="text20">Добавление уместной анимации</li>
-                        <li class="text20">Добавление необходимых окон (онлайн-оплата, расчет стоимости товаров, сбор заявок)</li>
-                        <li class="text20">Подготовка макета к верстке</li>
-                    </ul>
+                <div class="services__about">
+                    <div class="services__do">
+                        <ul class="services__list">
+                            <li class="text20">Прототип приложения</li>
+                            <li class="text20">Анализ конкурентов</li>
+                            <li class="text20">Составление пользовательского сценария</li>
+                            <li class="text20">UI Kit (отдельная страница со стилями)</li>
+                            <li class="text20">Отрисовка уникального дизайна в Figma (только для мобильных)</li>
+                            <li class="text20">Добавление уместной анимации</li>
+                            <li class="text20">Добавление необходимых окон (онлайн-оплата, расчет стоимости товаров, сбор заявок)</li>
+                            <li class="text20">Подготовка макета к верстке</li>
+                        </ul>
+                    </div>
+
+                    <div data-services="app" class="services__image">
+                        <picture>
+                            <source type="image/avif" srcset="img/app@2x.avif 1x, img/app@4x.avif 2x">
+                            <source type="image/webp" srcset="img/app@2x.webp 1x, img/app@4x.webp 2x">
+                            <img src="img/app@2x.png" srcset="img/app@4x.png 2x" alt="">
+                        </picture>
+                    </div>
                 </div>
 
-                <div data-services="app" class="services__image">
-                    <picture>
-                        <source type="image/avif" srcset="img/app@2x.avif 1x, img/app@4x.avif 2x">
-                        <source type="image/webp" srcset="img/app@2x.webp 1x, img/app@4x.webp 2x">
-                        <img src="img/app@2x.png" srcset="img/app@4x.png 2x" alt="">
-                    </picture>
+                <div class="services__footer">
+                    <div class="services__price">
+                        <p class="text24"><span>Цена: </span> от 40 000₽  </p>
+                        <p class="text24"><span>Сроки работы: </span> от 3 недель </p>
+                        <p class="text16">*правки по макету вносятся бесплатно в течение 2 месяцев после завершения работы. <a href="#">Подробнее</a></p>
+                    </div>
+
+                    <button class="button button-big button-solid">
+                        <p class="buttonBigText">Заказать</p>
+
+                        <svg class="">
+                        <use xlink:href="img/sprite.svg#buttonArrow"></use>
+                        </svg>
+                    </button>
                 </div>
-            </div>
-
-            <div class="services__footer">
-                <div class="services__price">
-                    <p class="text24"><span>Цена: </span> от 40 000₽  </p>
-                    <p class="text24"><span>Сроки работы: </span> от 3 недель </p>
-                    <p class="text16">*правки по макету вносятся бесплатно в течение 2 месяцев после завершения работы. <a href="#">Подробнее</a></p>
-                </div>
-
-                <button class="button button-big button-solid">
-                    <p class="buttonBigText">Заказать</p>
-
-                    <svg class="">
-                      <use xlink:href="img/sprite.svg#buttonArrow"></use>
-                    </svg>
-                </button>
             </div>
         </div>
     </div>
