--- a/src/modules/header/header.html
+++ b/src/modules/header/header.html
@@ -15,16 +15,26 @@
               <img src="img/header__ellipse-right@1x.png" srcset="img/header__ellipse-right@2x.png 2x" alt="">
             </picture>
         </div>
-        <h2 class="h2">РАКИТОВА ЕКАТЕРИНА</h2>
-        <h1 class="h1">UX/UI ДИЗАЙНЕР</h1>
 
-        <p id="title" class="header__title-text text20">
-            Разрабатываю сайты и приложения для Вашего бизнеса. Соблюдаю структуру,
-            не перегружаю интерфейсы лишними декоративными элементами.
-            Сотрудничая со мной, вы получаете удобный и красивый дизайн сайта/приложения за кратчайшие сроки.
+        <h2 class="h2 title-parent">
+            <span data-queue="1" class="title-first title-animation">РАКИТОВА</span>
+            <span data-queue="2" class="title-first title-animation">ЕКАТЕРИНА</span>
+        </h2>
+
+        <h1 class="h1 title-parent">
+            <span data-queue="3" class="title-first title-animation">UX/UI</span>
+            <span data-queue="4" class="title-first title-animation">ДИЗАЙНЕР</span>
+        </h1>
+
+        <p id="title" class="header__title-text text20 title-parent">
+            <span data-queue="5" class="title-first title-animation">
+                Разрабатываю сайты и приложения для Вашего бизнеса. Соблюдаю структуру,
+                не перегружаю интерфейсы лишними декоративными элементами.
+                Сотрудничая со мной, вы получаете удобный и красивый дизайн сайта/приложения за кратчайшие сроки.
+            </span>
         </p>
 
-        <button class="button button-big button-solid">
+        <button class="button button-big title-first animation-button button-solid">
             <p class="buttonBigText">К услугам</p>
 
             <svg class="">
