--- a/src/modules/portfolio/portfolio.html
+++ b/src/modules/portfolio/portfolio.html
@@ -1,8 +1,8 @@
 <section id="portfolio">
     <div class="portfolio container">
-        <div class="hidden">
-            <h2 class="portfolio__title title-entry h2">Портфолио</h2>
-        </div>
+        <h2 class="portfolio__title h2 hidden title-parent">
+            <span data-queue="1" class="title-animation">Портфолио</span>
+        </h2>
 
         <div class="portfolio__grid">
             <div class="grid-entry hidden main1">
