--- a/src/modules/reasons/reasons.html
+++ b/src/modules/reasons/reasons.html
@@ -1,8 +1,14 @@
 <section id="reasons">
     <div class="reasons container">
-        <div class="reasons__title hidden">
-            <div class="reasons__sum title-entry h2">7</div>
-            <h2 class="title-entry h2">Причин Почему стоит работать <br> <span>именно</span> со мной</h2>
+        <div class="hidden title-parent reasons__title">
+            <div data-queue="1" class="reasons__sum h2 title-animation">
+                7
+            </div>
+
+            <h2 data-queue="2" class="title-animation h2">
+                причин Почему стоит работать <br>
+                <span class="reasons__highlighted">именно</span> со мной
+            </h2>
         </div>
     </div>
 </section>
