--- a/src/modules/services/services.html
+++ b/src/modules/services/services.html
@@ -1,8 +1,8 @@
 <section id="services">
     <div class="services container">
-        <div class="hidden">
-            <h2 class="services__title title-entry h2">Услуги</h2>
-        </div>
+        <h2 class="services__title h2 hidden title-parent">
+            <span data-queue="1" class="title-animation">Услуги</span>
+        </h2>
 
         <div class="hidden">
             <div class="services__item service-entry">
