--- a/src/modules/nav/nav.html
+++ b/src/modules/nav/nav.html
@@ -1,43 +1,56 @@
 <nav class="nav js-nav">
     <div class="read-progress js-read-progress"></div>
-    <h3 class="h3">KateDesign</h3>
 
-    <ul class="nav__list">
-        <li class="nav__item">ОБО МНЕ</li>
-        <li class="nav__item">УСЛУГИ</li>
-        <li class="nav__item">ПОРТФОЛИО</li>
-        <li class="nav__item">ОТЗЫВЫ</li>
-        <li class="nav__item">КОНТАКТЫ</li>
-    </ul>
+    <div class="nav__mobile">
+        <h3 class="h3">KateDesign</h3>
 
-    <div class="nav__right">
-        <button class="button button-small button-opacity">
-            <p class="buttonSmallText">Связаться</p>
-        </button>
+        <div class="nav__burger js-burger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
 
-        <div class="nav__translate">
-            <div data-lang="rus" data-position="1" id="ru" class="nav__lang js-nav__lang">
-                <svg class="nav__flag">
-                <use xlink:href="img/sprite.svg#rus"></use>
-                </svg>
+    <div class="nav__info js-nav__info">
+        <h3 class="h3">KateDesign</h3>
 
-                <p>RU</p>
-            </div>
+        <ul class="nav__list">
+            <li data-queue="1" class="nav__item">ОБО МНЕ</li>
+            <li data-queue="2" class="nav__item">УСЛУГИ</li>
+            <li data-queue="3" class="nav__item">ПОРТФОЛИО</li>
+            <li data-queue="4" class="nav__item">ОТЗЫВЫ</li>
+            <li data-queue="5" class="nav__item">КОНТАКТЫ</li>
+        </ul>
 
-            <div data-lang="eng" data-position="2" id="en" class="nav__lang js-nav__lang">
-                <svg class="nav__flag">
-                <use xlink:href="img/sprite.svg#eng"></use>
-                </svg>
+        <div class="nav__right">
+            <button data-queue="6" class="button button-small button-opacity">
+                <p class="buttonSmallText">Связаться</p>
+            </button>
 
-                <p>EN</p>
-            </div>
+            <div data-queue="7" class="nav__translate">
+                <div data-lang="rus" data-position="1" id="ru" class="nav__lang js-nav__lang">
+                    <svg class="nav__flag">
+                    <use xlink:href="img/sprite.svg#rus"></use>
+                    </svg>
 
-            <div data-lang="ua" data-position="3" id="ua" class="nav__lang js-nav__lang">
-                <svg class="nav__flag">
-                <use xlink:href="img/sprite.svg#ua"></use>
-                </svg>
+                    <p>RU</p>
+                </div>
 
-                <p>UA</p>
+                <div data-lang="eng" data-position="2" id="en" class="nav__lang js-nav__lang">
+                    <svg class="nav__flag">
+                    <use xlink:href="img/sprite.svg#eng"></use>
+                    </svg>
+
+                    <p>EN</p>
+                </div>
+
+                <div data-lang="ua" data-position="3" id="ua" class="nav__lang js-nav__lang">
+                    <svg class="nav__flag">
+                    <use xlink:href="img/sprite.svg#ua"></use>
+                    </svg>
+
+                    <p>UA</p>
+                </div>
             </div>
         </div>
     </div>
