--- a/src/modules/header/header.html
+++ b/src/modules/header/header.html
@@ -1,3 +1,5 @@
+<div class="mobile__padding"></div>
+
 <div class="header">
     <div class="header__title">
         <div class="header__gradient-left">
@@ -16,31 +18,35 @@
             </picture>
         </div>
 
-        <h2 class="h2 title-parent">
-            <span data-queue="1" class="title-first title-animation">РАКИТОВА</span>
-            <span data-queue="2" class="title-first title-animation">ЕКАТЕРИНА</span>
-        </h2>
+        <div class="header__top">
+            <h2 class="h2 title-parent">
+                <span data-queue="1" class="title-first title-animation">РАКИТОВА</span>
+                <span data-queue="2" class="title-first title-animation">ЕКАТЕРИНА</span>
+            </h2>
 
-        <h1 class="h1 title-parent">
-            <span data-queue="3" class="title-first title-animation">UX/UI</span>
-            <span data-queue="4" class="title-first title-animation">ДИЗАЙНЕР</span>
-        </h1>
+            <h1 class="h1 title-parent">
+                <span data-queue="3" class="title-first title-animation">UX/UI</span>
+                <span data-queue="4" class="title-first title-animation">ДИЗАЙНЕР</span>
+            </h1>
+        </div>
 
-        <p id="title" class="header__title-text text20 title-parent">
-            <span data-queue="5" class="title-first title-animation">
-                Разрабатываю сайты и приложения для Вашего бизнеса. Соблюдаю структуру,
-                не перегружаю интерфейсы лишними декоративными элементами.
-                Сотрудничая со мной, вы получаете удобный и красивый дизайн сайта/приложения за кратчайшие сроки.
-            </span>
-        </p>
+        <div class="header__bottom">
+            <p id="title" class="header__title-text text20 title-parent">
+                <span data-queue="5" class="title-first title-animation">
+                    Разрабатываю сайты и приложения для Вашего бизнеса. Соблюдаю структуру,
+                    не перегружаю интерфейсы лишними декоративными элементами.
+                    Сотрудничая со мной, вы получаете удобный и красивый дизайн сайта/приложения за кратчайшие сроки.
+                </span>
+            </p>
 
-        <button class="button button-big title-first animation-button button-solid">
-            <p class="buttonBigText">К услугам</p>
+            <button class="button button-big title-first animation-button button-solid">
+                <p class="buttonBigText">К услугам</p>
 
-            <svg class="">
-              <use xlink:href="img/sprite.svg#buttonArrow"></use>
-            </svg>
-        </button>
+                <svg class="">
+                <use xlink:href="img/sprite.svg#buttonArrow"></use>
+                </svg>
+            </button>
+        </div>
     </div>
 
     <div class="header__image">
@@ -49,5 +55,9 @@
           <source type="image/webp" srcset="img/header@1x.webp 1x, img/header@2x.webp 2x">
           <img src="img/header@1x.jpg" srcset="img/header@2x.jpg 2x" alt="My photo">
         </picture>
+    </div>
+
+    <div class="header__mobileFooter">
+
     </div>
 </div>
