ADD: chat mobile

--- a/src/modules/about/about.html
+++ b/src/modules/about/about.html
@@ -1,6 +1,9 @@
 <section id="about">
     <div class="about container">
 
+        <h2 id="test" class="about__title h2 hidden title-parent">
+            <span data-queue="1" class="title-animation">Обо мне</span>
+        </h2>
 
         <!-- CHAT -->
         <div class="chat js-chat hidden">
