ADD: reasons & any fix

--- a/src/modules/services/services.html
+++ b/src/modules/services/services.html
@@ -31,9 +31,17 @@
                 </div>
 
                 <div class="services__footer">
-                    <div class="services__price">
-                        <p class="text24"><span>Цена: </span> от 10 000₽ </p>
-                        <p class="text24"><span>Сроки работы: </span> от 1 недели </p>
+                    <div class="services__info">
+                        <p class="text24">
+                            <span class="services__question">Цена: </span><br>
+                            <span class="services__answer">от 10 000₽</span>
+                        </p>
+
+                        <p class="text24">
+                            <span class="services__question">Сроки работы: </span><br>
+                            <span class="services__answer">от 1 недели</span>
+                        </p>
+
                         <p class="text16">*правки по макету вносятся бесплатно в течение 2 месяцев после завершения работы. <a href="#">Подробнее</a></p>
                     </div>
 
@@ -79,9 +87,15 @@
                 </div>
 
                 <div class="services__footer">
-                    <div class="services__price">
-                        <p class="text24"><span>Цена: </span> от 30 000₽  </p>
-                        <p class="text24"><span>Сроки работы: </span> от 3 недель </p>
+                    <div class="services__info">
+                        <p class="text24">
+                            <span class="services__question">Цена: </span><br>
+                            <span class="services__answer">от 30 000₽</span>
+                        </p>
+                        <p class="text24">
+                            <span class="services__question">Сроки работы: </span><br>
+                            <span class="services__answer">от 3 недель</span>
+                        </p>
                         <p class="text16">*правки по макету вносятся бесплатно в течение 2 месяцев после завершения работы. <a href="#">Подробнее</a></p>
                     </div>
 
@@ -124,9 +138,15 @@
                 </div>
 
                 <div class="services__footer">
-                    <div class="services__price">
-                        <p class="text24"><span>Цена: </span> от 40 000₽  </p>
-                        <p class="text24"><span>Сроки работы: </span> от 3 недель </p>
+                    <div class="services__info">
+                        <p class="text24">
+                            <span class="services__question">Цена: </span><br>
+                            <span class="services__answer">от 40 000₽</span>
+                        </p>
+                        <p class="text24">
+                            <span class="services__question">Сроки работы: </span><br>
+                            <span class="services__answer">от 3 недель</span>
+                        </p>
                         <p class="text16">*правки по макету вносятся бесплатно в течение 2 месяцев после завершения работы. <a href="#">Подробнее</a></p>
                     </div>
 
