--- a/src/modules/about/about.html
+++ b/src/modules/about/about.html
@@ -139,7 +139,7 @@
                                     <use xlink:href="img/sprite.svg#education__checkpoint"></use>
                                 </svg>
 
-                                <h4>2019</h4>
+                                <h4 class="h4">2019</h4>
                             </div>
 
                             <div class="tabs__way">
@@ -157,7 +157,7 @@
                                     <use xlink:href="img/sprite.svg#education__checkpoint"></use>
                                 </svg>
 
-                                <h4>2022</h4>
+                                <h4 class="h4">2022</h4>
                             </div>
 
                             <div class="tabs__way">
@@ -175,7 +175,7 @@
                                     <use xlink:href="img/sprite.svg#education__checkpoint"></use>
                                 </svg>
 
-                                <h4>2023</h4>
+                                <h4 class="h4">2023</h4>
                             </div>
 
                             <div class="tabs__way">
@@ -193,7 +193,7 @@
                                     <use xlink:href="img/sprite.svg#education__checkpoint"></use>
                                 </svg>
 
-                                <h4>2020 <span>-</span> 2024</h4>
+                                <h4 class="h4">2020 <span>-</span> 2024</h4>
                             </div>
 
                             <div class="tabs__way">
