ADD: form & MANY FIXED

--- a/src/modules/portfolio/portfolio.html
+++ b/src/modules/portfolio/portfolio.html
@@ -5,7 +5,7 @@
         </h2>
 
         <div class="portfolio__grid">
-            <div class="grid-entry hidden main1">
+            <div id="holdMyCode__preview" class="grid-entry hidden main1">
                 <div class="portfolio__item portfolio-entry-left">
                     <picture>
                       <source type="image/avif" srcset="img/main1@2x.avif 1x, img/main1@4x.avif 2x">
