--- a/src/modules/nav/nav.html
+++ b/src/modules/nav/nav.html
@@ -27,7 +27,7 @@
                 <p class="buttonSmallText">Связаться</p>
             </button>
 
-            <div data-queue="1" class="nav__translate">
+            <!-- <div data-queue="1" class="nav__translate">
                 <div data-lang="rus" data-position="1" id="ru" class="nav__lang js-nav__lang">
                     <svg class="nav__flag">
                     <use xlink:href="img/sprite.svg#rus"></use>
@@ -51,7 +51,7 @@
 
                     <p>UA</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </nav>
