--- a/src/modules/about/about.html
+++ b/src/modules/about/about.html
@@ -29,7 +29,7 @@
 
                     <!--  chat__text-isTyped -->
                     <div class="chat__text js-clientMessage">
-                        <p>Привет! Почему ты решила стать UX/UI дизайнером?</p>
+                        <p class="text16">Привет! Почему ты решила стать UX/UI дизайнером?</p>
                     </div>
                 </div>
             </div>
