--- a/src/modules/nav/nav.html
+++ b/src/modules/nav/nav.html
@@ -15,11 +15,11 @@
         <h3 class="h3">KateDesign</h3>
 
         <ul class="nav__list">
-            <a href="#about"><li data-queue="7" class="nav__item">ОБО МНЕ</li></a>
-            <a href="#services"><li data-queue="6" class="nav__item">УСЛУГИ</li></a>
-            <a href="#portfolio"><li data-queue="5" class="nav__item">ПОРТФОЛИО</li></a>
-            <a href="#reviews"><li data-queue="4" class="nav__item">ОТЗЫВЫ</li></a>
-            <a href="#form"><li data-queue="3" class="nav__item">КОНТАКТЫ</li></a>
+            <a href="#about" class="js-nav__link"><li data-queue="7" class="nav__item">ОБО МНЕ</li></a>
+            <a href="#services" class="js-nav__link"><li data-queue="6" class="nav__item">УСЛУГИ</li></a>
+            <a href="#portfolio" class="js-nav__link"><li data-queue="5" class="nav__item">ПОРТФОЛИО</li></a>
+            <a href="#reviews" class="js-nav__link"><li data-queue="4" class="nav__item">ОТЗЫВЫ</li></a>
+            <a href="#form" class="js-nav__link"><li data-queue="3" class="nav__item">КОНТАКТЫ</li></a>
         </ul>
 
         <div class="nav__right">
