--- a/src/modules/about/about.html
+++ b/src/modules/about/about.html
@@ -204,15 +204,15 @@
                         </div>
                     </div>
 
-                    <!-- <div class="tabs__certificate">
-                        <button class="button button-small button-opacity">
+                    <div class="tabs__certificate">
+                        <button class="button button-small button-opacity" id="Certificate__preview">
                             <p>Сертификаты</p>
 
                             <svg class="">
-                              <use xlink:href="img/sprite.svg#buttonArrow"></use>
+                                <use xlink:href="img/sprite.svg#buttonArrow"></use>
                             </svg>
                         </button>
-                    </div> -->
+                    </div>
                 </div>
 
                 <div data-tab="2" class="tabs__info">
